--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,7 +15,6 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -28,40 +27,28 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest requests allure-pytest selenium webdriver-manager
-        
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
         pytest test_add_to_cart.py test_form_cart.py --alluredir=allure-results
-      continue-on-error: True
-
-
+    - name: List allure-results
+      run: ls -al allure-results  # Проверка содержимого папки
     - name: Load test report history
       uses: actions/checkout@v3
-      if: always()
-      continue-on-error: true
       with:
         ref: gh-pages
-        path: gh-pages
-
     - name: Build test report
       uses: simple-elf/allure-report-action@v1.7
-      if: always()
       with:
         gh_pages: gh-pages
         allure_history: allure-history
         allure_results: allure-results
-
     - name: Publish test report
       uses: peaceiris/actions-gh-pages@v3
-      if: always()
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
