--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,7 +34,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-            bash pytest tests --alluredir=allure-results 
+            pytest tests --alluredir=allure-results 
     - name: List allure-results
       run: ls -al allure-results  
     - name: Load test report history
